demo/devops/deployments/consul/cities.yaml
apiVersion: v1
kind: Service
metadata:
  name: cities
  namespace: demo
spec:
  ports:
    - name: http
      port: 8082
      protocol: TCP
  selector:
    app: cities
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cities
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cities
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
      labels:
        app: cities
    spec:
      containers:
        - image: nguyentrantrung/cities:latest
          imagePullPolicy: Always
          name: cities-container
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 125Mi
              cpu: 100m
      serviceAccountName: cities
