demo/devops/deployments/consul/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: demo
spec:
  ports:
    - name: http
      port: 8082
      protocol: TCP
  selector:
    app: dashboard
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: 'true'
      labels:
        app: dashboard
    spec:
      containers:
        - image: nguyentrantrung/dashboard:latest
          imagePullPolicy: Always
          name: dashboard-container
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          resources:
            limits:
              memory: 125Mi
              cpu: 100m
      serviceAccountName: dashboard
